--- a/Web code/package.json
+++ b/Web code/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.10.1",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
@@ -17,6 +18,7 @@
     "next": "15.3.3",
     "next-auth": "^4.24.11",
     "postcss": "^8.5.6",
+    "query-string": "^9.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
