--- a/Web code/package.json
+++ b/Web code/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "leaflet": "^1.9.4",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
     "postcss": "^8.5.6",
@@ -24,6 +25,10 @@
     "react-hook-form": "^7.58.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
+    "react-select": "^5.10.1",
+    "react-world-flags": "^1.6.0",
+    "world-countries": "^5.1.0",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
@@ -31,6 +36,7 @@
     "@tailwindcss/postcss": "^4.1.10",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/leaflet": "^1.9.19",
     "@types/node": "^20.19.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
