--- a/Web code/package.json
+++ b/Web code/package.json
@@ -18,6 +18,7 @@
     "leaflet": "^1.9.4",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
+    "next-cloudinary": "^6.16.0",
     "postcss": "^8.5.6",
     "query-string": "^9.2.1",
     "react": "^19.0.0",
