--- a/Web code/package.json
+++ b/Web code/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "date-fns": "^4.1.0",
     "leaflet": "^1.9.4",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
@@ -30,7 +31,8 @@
     "react-select": "^5.10.1",
     "react-world-flags": "^1.6.0",
     "world-countries": "^5.1.0",
-    "zustand": "^5.0.5"
+    "zustand": "^5.0.5",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -41,6 +43,7 @@
     "@types/node": "^20.19.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/zxcvbn": "^4.4.5",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "prisma": "^6.10.1",
