--- a/Web code/package.json
+++ b/Web code/package.json
@@ -12,11 +12,14 @@
     "@auth/prisma-adapter": "^2.9.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.10.1",
+    "@react-google-maps/api": "^2.20.7",
+    "@types/lodash": "^4.17.20",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "date-fns": "^4.1.0",
     "leaflet": "^1.9.4",
+    "lodash": "^4.17.21",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
     "next-cloudinary": "^6.16.0",
@@ -30,6 +33,7 @@
     "react-leaflet": "^5.0.0",
     "react-select": "^5.10.1",
     "react-world-flags": "^1.6.0",
+    "use-places-autocomplete": "^4.0.1",
     "world-countries": "^5.1.0",
     "zustand": "^5.0.5",
     "zxcvbn": "^4.4.2"
@@ -43,6 +47,8 @@
     "@types/node": "^20.19.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-slick": "^0.23.13",
+    "@types/react-world-flags": "^1.6.0",
     "@types/zxcvbn": "^4.4.5",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
