--- a/Web code/package.json
+++ b/Web code/package.json
@@ -26,6 +26,7 @@
     "postcss": "^8.5.6",
     "query-string": "^9.2.1",
     "react": "^19.0.0",
+    "react-date-range": "^2.0.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
     "react-hot-toast": "^2.5.2",
@@ -46,6 +47,7 @@
     "@types/leaflet": "^1.9.19",
     "@types/node": "^20.19.1",
     "@types/react": "^19",
+    "@types/react-date-range": "^1.4.10",
     "@types/react-dom": "^19",
     "@types/react-slick": "^0.23.13",
     "@types/react-world-flags": "^1.6.0",
