--- a/Web code/package.json
+++ b/Web code/package.json
@@ -33,6 +33,7 @@
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-select": "^5.10.1",
+    "react-spinners": "^0.17.0",
     "react-world-flags": "^1.6.0",
     "use-places-autocomplete": "^4.0.1",
     "world-countries": "^5.1.0",
