--- a/Web code/package.json
+++ b/Web code/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.1",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.10.1",
+    "@prisma/client": "^6.12.0",
     "@react-google-maps/api": "^2.20.7",
     "@types/lodash": "^4.17.20",
     "axios": "^1.10.0",
@@ -20,8 +20,9 @@
     "date-fns": "^4.1.0",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.525.0",
     "next": "15.3.3",
-    "next-auth": "^4.24.11",
+    "next-auth": "^4.24.7",
     "next-cloudinary": "^6.16.0",
     "postcss": "^8.5.6",
     "query-string": "^9.2.1",
@@ -35,6 +36,7 @@
     "react-select": "^5.10.1",
     "react-spinners": "^0.17.0",
     "react-world-flags": "^1.6.0",
+    "recharts": "^3.1.0",
     "use-places-autocomplete": "^4.0.1",
     "world-countries": "^5.1.0",
     "zustand": "^5.0.5",
@@ -55,7 +57,7 @@
     "@types/zxcvbn": "^4.4.5",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
-    "prisma": "^6.10.1",
+    "prisma": "^6.12.0",
     "tailwindcss": "^4.1.10",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
