--- a/Web code/package.json
+++ b/Web code/package.json
@@ -24,7 +24,6 @@
     "next": "15.3.3",
     "next-auth": "^4.24.7",
     "next-cloudinary": "^6.16.0",
-    "postcss": "^8.5.6",
     "query-string": "^9.2.1",
     "react": "^19.0.0",
     "react-date-range": "^2.0.1",
@@ -55,10 +54,12 @@
     "@types/react-slick": "^0.23.13",
     "@types/react-world-flags": "^1.6.0",
     "@types/zxcvbn": "^4.4.5",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
+    "postcss": "^8.5.6",
     "prisma": "^6.12.0",
-    "tailwindcss": "^4.1.10",
+    "tailwindcss": "^4.1.11",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   }
