modify some proplemes

--- a/Web code/tsconfig.json
+++ b/Web code/tsconfig.json
@@ -23,6 +23,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/api/register/route.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/api/register/route.ts", "app/test.js","types/next-auth.d.ts"],
   "exclude": ["node_modules"]
 }
