--- a/Web code/package.json
+++ b/Web code/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.1",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.12.0",
+    "@prisma/client": "^6.13.0",
     "@react-google-maps/api": "^2.20.7",
     "@types/lodash": "^4.17.20",
     "axios": "^1.10.0",
@@ -47,7 +47,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/leaflet": "^1.9.19",
-    "@types/node": "^20.19.1",
+    "@types/node": "^20.19.9",
     "@types/react": "^19",
     "@types/react-date-range": "^1.4.10",
     "@types/react-dom": "^19",
@@ -58,9 +58,10 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "postcss": "^8.5.6",
-    "prisma": "^6.12.0",
+    "prisma": "^6.13.0",
     "tailwindcss": "^4.1.11",
+    "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
-    "typescript": "^5.8.3"
+    "typescript": "^5.9.2"
   }
 }
