--- a/Web_code/package.json
+++ b/Web_code/package.json
@@ -19,6 +19,7 @@
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "date-fns": "^4.1.0",
+    "keen-slider": "^6.8.6",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.525.0",
@@ -37,6 +38,7 @@
     "react-spinners": "^0.17.0",
     "react-world-flags": "^1.6.0",
     "recharts": "^3.1.0",
+    "swiper": "^11.2.10",
     "use-places-autocomplete": "^4.0.1",
     "world-countries": "^5.1.0",
     "zustand": "^5.0.5",
