--- a/Web_code/package.json
+++ b/Web_code/package.json
@@ -11,8 +11,9 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.1",
+    "@hookform/resolvers": "^5.2.1",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.13.0",
+    "@prisma/client": "^6.14.0",
     "@react-google-maps/api": "^2.20.7",
     "@types/lodash": "^4.17.20",
     "axios": "^1.10.0",
@@ -26,13 +27,15 @@
     "next": "15.3.3",
     "next-auth": "^4.24.7",
     "next-cloudinary": "^6.16.0",
+    "nodemailer": "^6.10.1",
     "query-string": "^9.2.1",
     "react": "^19.0.0",
     "react-date-range": "^2.0.1",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.58.1",
+    "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-image-gallery": "^1.4.0",
     "react-leaflet": "^5.0.0",
     "react-select": "^5.10.1",
     "react-spinners": "^0.17.0",
@@ -51,9 +54,11 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/leaflet": "^1.9.19",
     "@types/node": "^20.19.9",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-date-range": "^1.4.10",
     "@types/react-dom": "^19",
+    "@types/react-image-gallery": "^1.2.4",
     "@types/react-slick": "^0.23.13",
     "@types/react-world-flags": "^1.6.0",
     "@types/zxcvbn": "^4.4.5",
@@ -61,10 +66,11 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "postcss": "^8.5.6",
-    "prisma": "^6.13.0",
+    "prisma": "^6.14.0",
     "tailwindcss": "^4.1.11",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "zod": "^4.0.17"
   }
 }
