--- a/Web_code/package.json
+++ b/Web_code/package.json
@@ -27,6 +27,7 @@
     "next": "15.3.3",
     "next-auth": "^4.24.7",
     "next-cloudinary": "^6.16.0",
+    "next-intl": "^4.3.4",
     "nodemailer": "^6.10.1",
     "query-string": "^9.2.1",
     "react": "^19.0.0",
