--- a/Web_code/package.json
+++ b/Web_code/package.json
@@ -20,6 +20,9 @@
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "date-fns": "^4.1.0",
+    "html2pdf.js": "^0.11.2",
+    "i18next": "^25.4.2",
+    "jspdf": "^3.0.2",
     "keen-slider": "^6.8.6",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
@@ -35,6 +38,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.5.2",
+    "react-i18next": "^15.7.2",
     "react-icons": "^5.5.0",
     "react-image-gallery": "^1.4.0",
     "react-leaflet": "^5.0.0",
@@ -42,6 +46,7 @@
     "react-spinners": "^0.17.0",
     "react-world-flags": "^1.6.0",
     "recharts": "^3.1.0",
+    "stripe": "^18.4.0",
     "swiper": "^11.2.10",
     "use-places-autocomplete": "^4.0.1",
     "world-countries": "^5.1.0",
@@ -54,12 +59,16 @@
     "@tailwindcss/postcss": "^4.1.10",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/html2pdf.js": "^0.10.0",
+    "@types/i18next": "^12.1.0",
+    "@types/jspdf": "^1.3.3",
     "@types/leaflet": "^1.9.19",
     "@types/node": "^20.19.9",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-date-range": "^1.4.10",
     "@types/react-dom": "^19",
+    "@types/react-i18next": "^7.8.3",
     "@types/react-image-gallery": "^1.2.4",
     "@types/react-slick": "^0.23.13",
     "@types/react-world-flags": "^1.6.0",
