--- a/Web_code/package.json
+++ b/Web_code/package.json
@@ -15,10 +15,13 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.14.0",
     "@react-google-maps/api": "^2.20.7",
+    "@supabase/supabase-js": "^2.57.4",
     "@types/lodash": "^4.17.20",
+    "@uploadthing/react": "^7.3.3",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
     "date-fns": "^4.1.0",
     "html2pdf.js": "^0.11.2",
     "i18next": "^25.4.2",
@@ -27,15 +30,15 @@
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.525.0",
-    "next": "15.3.3",
+    "next": "^15.5.3",
     "next-auth": "^4.24.7",
-    "next-cloudinary": "^6.16.0",
     "next-intl": "^4.3.4",
     "nodemailer": "^6.10.1",
     "query-string": "^9.2.1",
     "react": "^19.0.0",
     "react-date-range": "^2.0.1",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.5.2",
     "react-i18next": "^15.7.2",
@@ -48,6 +51,7 @@
     "recharts": "^3.1.0",
     "stripe": "^18.4.0",
     "swiper": "^11.2.10",
+    "uploadthing": "^7.7.4",
     "use-places-autocomplete": "^4.0.1",
     "world-countries": "^5.1.0",
     "yet-another-react-lightbox": "^3.25.0",
